# event_logger

./: CMakeLists.txt  README.md  package.xml
launch/: demo.launch
msg/: BatteryStatus.msg  DestinationReachedEvent.msg  Event.msg  LowBatteryEvent.msg  MisionEndedEvent.msg  MisionStartedEvent.msg  VehicleDeployedEvent.msg
scripts/: EventDispatcher.py  EventLogger.py  EventProcessor.py  EventPublisher.py  ReportLogger.py  event_logger_app.py  event_publisher_app.py
